--- a/website/components/sidebar.html
+++ b/website/components/sidebar.html
@@ -7,6 +7,9 @@
         class="sidebar-logo-img"
       />
     </a>
+      <button id="sidebar-close-btn" class="sidebar-close-btn" title="Close sidebar">
+    ✕
+  </button>
   </div>
 
   <nav class="sidebar-nav">
